# gen-ai-cv-lab-1

./: .gitignore  README.md  gan_wider.ipynb  pyproject.toml  requirements.txt  sample.env
notebooks/: .gitignore  autoencoder.ipynb  gan.ipynb  gan_wider.ipynb  norm_flow.ipynb  vae.ipynb
params/: autoencoder.yml  gan.yml  norm_flow.yml  vae.yml
src/models/: autoencoder.py  base_model.py  gan.py  norm_flow.py  vae.py
src/training/: trainer.py
src/visualization/: base_visualizer.py  gan_visualizer.py  vae_visualizer.py
